--- a/JOBserve/Info.plist
+++ b/JOBserve/Info.plist
@@ -2,9 +2,9 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>UIAppFonts</key>
-	<array>
-		<string>Montserrat-Medium.ttf</string>
-	</array>
+	<key>NSCameraUsageDescription</key>
+	<string>This app use the camera</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>This app use your photo library</string>
 </dict>
 </plist>
