Ajout des votes et des participations aux évenements

--- a/JOBserve/Info.plist
+++ b/JOBserve/Info.plist
@@ -6,5 +6,7 @@
 	<string>This app use the camera</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>This app use your photo library</string>
+	<key>NSCalendarsUsageDescription</key>
+	<string>This app use the calendar app</string>
 </dict>
 </plist>
